[package]
name = "actionkv"
version = "0.1.0"
authors = ["Jiayu Liu <jiayu@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
byteorder = "1.4"
crc = "1.8"
serde = "1"
serde_derive = "1"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_disk.rs"
